[package]
name = "surrealkv"
publish = true
version = "0.3.7"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A low-level, versioned, embedded, ACID-compliant, key-value database for Rust"
repository = "https://github.com/surrealdb/surrealkv"
homepage = "https://github.com/surrealdb/surrealkv"
documentation = "https://docs.rs/surrealkv/"
keywords = ["lmdb", "rocksdb", "sled", "redb", "tikv"]
categories = ["database-implementations", "concurrency", "data-structures"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempdir = "0.3"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
mimalloc = { version = "0.1.39", default-features = false }
nanoid = "0.4.0"
fastrand = "2.0.1"
libc = "0.2.155"
fmmap = "0.3.3"
memmap2 = "0.9.4"

[[bench]]
name = "store_bench"
harness = false
